# ComputerVision

./: Edgels.m  README.md  calculateDoG.m
C++ Design and Playground/: CPLUSPLUSBOOK.cpp  CPLUSPLUSBOOK.h
CUDA_Programming/: CUDASURF.cpp  CUDASURF.h  background.cpp  background.h
Cmake Files/: CMakeLists.txt  cmake_install.cmake
Color Conversion Utilities/: VISUAL.h
Face Recognition/: facetracking.cpp  facetracking.h  facetracking2.cpp  facetracking2.h
Feature_Selection/: SIFT.cpp  SIFT.h  SURF.cpp  SURF.h  SURFKNNFLANN.cpp  SURFKNNFLANN.h  SURFLiuLiu.cpp  SURFLiuLiu.h  calcSiftSurf.cpp
GPU Functionalities/: GPUTimer.cpp  GPUTimer.h  TimingGPU.cu  TimingGPU.h
Histogram/: HistogramClassfier.cpp  HistogramClassfier.h  histogram.cpp  histogram.hpp
Human Action Recognition and Miscellaneous/: comparevisual.cpp  comparevisual.h
INSTALLATION_SCRIPTS/: OPENCV_FLAGS  SCRIPT_INSTALLATION
Kinnect_Projects/: KINECT.cpp  KINECT.h  KINECT2.cpp  KINECT2.h  KINECT3.cpp  KINECT3.h
Logo Detection/: LogoCVision.cpp  LogoDetection.h
Motion Estimation/: MotionLibrary.h
Motion Estimation/OPTICAL MOTION ESTIMATION/: opticalflow.h  opticalflowdescartes.cpp  opticalflowdescartes.h  opticalmotion.cpp  opticalmotion.h  opticalmotion2.cpp
Object_Tracking/: ObjectTracking.cpp  ObjectTracking.h  colortrack.cpp  colortrack.h
OpenGL/: OpenGL.cpp  OpenGL.h  OpenGL2.cpp  OpenGL2.h  OpenGL3.cpp  OpenGL3.h  TRESD.h
OpenNI/: OpenNI.cpp  OpenNI.h
Others/: Probingproject.cpp  Probingproject.h  pruebavideo.cpp  pruebavideo.h  showvisualwords.cpp
Profiling/: TimingCPU.cpp  TimingCPU.h  TimingGPU.cpp
Transformation_Utils/: rotation.h  rotationd.h
Util_Functions/: CVision.h
